# radarmind

./: .gitignore  README.md  config.json  pyproject.toml
openspec/changes/archive/2026-05-26-horizon-parser/: design.md  proposal.md
openspec/changes/archive/2026-05-26-horizon-parser/specs'horizon-title-extraction/: spec.md
openspec/changes/horizon-parser/: tasks.md
openspec/changes/horizon-parser/specs'horizon-parsing/: spec.md
openspec/changes/horizon-parser/specs/horizon-title-extraction/: spec.md
openspec/changes/radarmind/: design.md  proposal.md  tasks.md
openspec/changes/radarmind-scoring-optimization/: design.md  proposal.md  tasks.md
openspec/changes/radarmind-scoring-optimization/specs/ai-scoring/: spec.md
openspec/changes/radarmind-scoring-optimization/specs/batch-scoring/: spec.md
openspec/changes/radarmind/specs/ai-scoring/: spec.md
openspec/changes/radarmind/specs/config-schema/: spec.md
openspec/changes/radarmind/specs/feed-parsing/: spec.md
openspec/changes/radarmind/specs/radarmind-core/: spec.md
openspec/changes/radarmind/specs/report-generation/: spec.md
openspec/changes/radarmind/specs/topic-filtering/: spec.md
prompts/: generation.j2  scoring.j2
src/radar_mind/: __init__.py  __main__.py  cli.py  config.py  fetcher.py  filter.py  generator.py  output.py  scorer.py
src/radar_mind/sources/: __init__.py  article.py  atom.py  factory.py  horizon.py  rss.py
tests/: test_generator.py  test_horizon.py
